[package]
name = "mousetool"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Simulate natural mouse movement (Windows only)"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rand = { version = "0.10.1", features = ["std", "thread_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
winapi = { version = "0.3.9", features = ["winuser", "wingdi", "libloaderapi", "errhandlingapi"] }
